--------------

not yet  BJH  Release 11.05.00

              ppmtopcxl: fix incorrect output with > 256 colors.  Always
              broken.  (Program was added in primordial Netpbm in 1990).

              pjtoppm: fix crash based on uninitialized variable.
              Introduced in Netpbm 11.04 (September 2023).

              picttoppm: fix buffer overrun with insanely wide input.

              Build: Fix compile error on systems without 'asprintf'.
              Introduced in Netpbm 11.04 (September 2023).

23.09.27 BJH  Release 11.04.00

              pamaddnoise: add -salt.

              pamaddnoise: reject options that aren't meaningful for the type
              of noise specified rather than just ignore them.

              ppmtosixel: Add -7bit, so it works on more terminals, including
              xterms.  Thanks Scott Pakin.

              g3topbm: Add -correctlong

              build: Add COMPILED_BY environment variable to control the
              "compiled by" value from --version common option.  This helps
              with creating reproducible builds.

              pnmtojpeg: minor improvement to error messages about bad files.

              pammixmulti: Remove disclaimer of patent license.

              pamstack: Fix bug: acts like -firstmaxval specified when it
              wasn't.  Introduced in Netpbm 11.03 (June 2023).

              pamstack: Fix -lcmmaxval: chooses wrong maxval.  Always
              broken (-lcmmaxval was new in Netpbm 11.03 (June 2023)).

              pamstack: Fail gracefully when total number of planes is too
              large for unsigned integer.  Always broken (Pamstack was new in
              Netpbm 10.0 (June 2002).

              pamtosvg: fix hang.

              ppmfade: fix "file not found" crash for most fade modes.
              Introduced in Netpbm 10.98 (March 2022).

              ppmfade: fix incorrect block mode fade.  Always broken