@@ -14,6 +14,9 @@ not yet  BJH  Release 11.05.00
 
               picttoppm: fix buffer overrun with insanely wide input.
 
+              ppmtoxpm: fix incorrect output with insanely large number of
+              colors.
+
               Build: Fix compile error on systems without 'asprintf'.
               Introduced in Netpbm 11.04 (September 2023).
 
